app tagline updated

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div>
                     <i class="fa-brands fa-android"></i>
                     <h2>Custom App Development</h2>
-                    <p> Tailored app creation to meet specific business needs and functionalities.</p>
+                    <p> Costume app Development to meet specific business needs and functionalities.</p>
                     <a href="#">learn more</a>
                 </div>
                 <div>
@@ -132,10 +132,10 @@
                       <img src="images/work-1.png">
                       <div class="layers">
                           <h3>Chating APP</h3>
-                          <P>In this app users can caht with each others. 
-                              Download it from play store.
+                          <P>In this app you can caht with your frinds.
+                             Available soon at play store.
                           </P>
-                          <!--add app git or play store link here -->>
+                          <!--add app git or play store link here -->
                           <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                       </div>
                   </div>
@@ -144,8 +144,8 @@
                     <img src="images/work-2.png">
                     <div class="layers">
                     <h3>Expense Manager</h3>
-                          <P> This app will help you to manage your expense.
-                              Download it from play store.
+                          <P> This app will help you to manage your daily expenses and many more Features.
+                             Available soon at play store.
                           </P>
                           <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 
@@ -156,8 +156,8 @@
                     <img src="images/work-3.png">
                     <div class="layers">
                     <h3>Food Ording App</h3>
-                          <P> This app will help you to manage your expense.
-                              Download it from play store.
+                          <P> In this App you can order foods from you phone and get delivered at home. 
+                            Available soon at play store.
                           </P>
                           <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
